Updated with missing Must Have features
